--- a/libraries/ui/src/main/res/values-ar/strings.xml
+++ b/libraries/ui/src/main/res/values-ar/strings.xml
@@ -47,6 +47,7 @@
     <item>عادية</item>
     <item>أسرع بـ 1.25 مرة</item>
     <item>أسرع بـ 1.5 مرة</item>
+    <item>أسرع بـ 1.75 مرة</item>
     <item>أسرع بمرتين</item>
   </string-array>
   <string name="exo_track_selection_title_audio">صوت</string>
