--- a/libraries/ui/src/main/res/values-de/strings.xml
+++ b/libraries/ui/src/main/res/values-de/strings.xml
@@ -39,6 +39,7 @@
     <item>Standard</item>
     <item>1,25-fach</item>
     <item>1,5-fach</item>
+    <item>1,75-fach</item>
     <item>2-fach</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Audio</string>
