--- a/libraries/ui/src/main/res/values-et/strings.xml
+++ b/libraries/ui/src/main/res/values-et/strings.xml
@@ -39,6 +39,7 @@
     <item>Tavaline</item>
     <item>1,25-kordne</item>
     <item>1,5-kordne</item>
+    <item>1,75-kordne</item>
     <item>2-kordne</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Heli</string>
