--- a/libraries/ui/src/main/res/values-fa/strings.xml
+++ b/libraries/ui/src/main/res/values-fa/strings.xml
@@ -39,6 +39,7 @@
     <item>عادی</item>
     <item>۱٫۲۵ برابر</item>
     <item>۱٫۵ برابر</item>
+    <item>۱٫۷۵ برابر</item>
     <item>۲ برابر</item>
   </string-array>
   <string name="exo_track_selection_title_audio">صوتی</string>
