--- a/libraries/ui/src/main/res/values-gl/strings.xml
+++ b/libraries/ui/src/main/res/values-gl/strings.xml
@@ -39,6 +39,7 @@
     <item>Normal</item>
     <item>x 1,25</item>
     <item>x 1,5</item>
+    <item>x 1,75</item>
     <item>x 2</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Audio</string>
