--- a/libraries/ui/src/main/res/values-gu/strings.xml
+++ b/libraries/ui/src/main/res/values-gu/strings.xml
@@ -39,6 +39,7 @@
     <item>સામાન્ય</item>
     <item>1.25x</item>
     <item>1.5x</item>
+    <item>1.75x</item>
     <item>2x</item>
   </string-array>
   <string name="exo_track_selection_title_audio">ઑડિયો</string>
