--- a/libraries/ui/src/main/res/values-hu/strings.xml
+++ b/libraries/ui/src/main/res/values-hu/strings.xml
@@ -39,6 +39,7 @@
     <item>Normál</item>
     <item>1,25×</item>
     <item>1,5×</item>
+    <item>1,75×</item>
     <item>2×</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Hang</string>
