--- a/libraries/ui/src/main/res/values-ko/strings.xml
+++ b/libraries/ui/src/main/res/values-ko/strings.xml
@@ -39,6 +39,7 @@
     <item>보통</item>
     <item>1.25배속</item>
     <item>1.5배속</item>
+    <item>1.75배속</item>
     <item>2배속</item>
   </string-array>
   <string name="exo_track_selection_title_audio">오디오</string>
