--- a/libraries/ui/src/main/res/values-lt/strings.xml
+++ b/libraries/ui/src/main/res/values-lt/strings.xml
@@ -43,6 +43,7 @@
     <item>Įprasta</item>
     <item>1,25 k.</item>
     <item>1,5 k.</item>
+    <item>1,75 k.</item>
     <item>2 k.</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Garso įrašas</string>
