--- a/libraries/ui/src/main/res/values-mk/strings.xml
+++ b/libraries/ui/src/main/res/values-mk/strings.xml
@@ -39,6 +39,7 @@
     <item>Нормално</item>
     <item>1,25 пати</item>
     <item>1,5 пати</item>
+    <item>1,75 пати</item>
     <item>2 пати</item>
   </string-array>
   <string name="exo_track_selection_title_audio">Аудио</string>
