--- a/libraries/ui/src/main/res/values-mr/strings.xml
+++ b/libraries/ui/src/main/res/values-mr/strings.xml
@@ -39,6 +39,7 @@
     <item>सामान्य</item>
     <item>१.२५x</item>
     <item>१.५x</item>
+    <item>१.७५x</item>
     <item>२x</item>
   </string-array>
   <string name="exo_track_selection_title_audio">ऑडिओ</string>
