--- a/libraries/ui/src/main/res/values-ne/strings.xml
+++ b/libraries/ui/src/main/res/values-ne/strings.xml
@@ -39,6 +39,7 @@
     <item>सामान्य</item>
     <item>१.२५ गुणा</item>
     <item>१.५ गुणा</item>
+    <item>१.७५ गुणा</item>
     <item>२ गुणा</item>
   </string-array>
   <string name="exo_track_selection_title_audio">अडियो</string>
